build/log/idf_py_stdout_output_14724
[1/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
[2/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Espressif\frameworks\esp-idf-v5.0.1\Wscales\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.0_py3.8_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.0.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Espressif/frameworks/esp-idf-v5.0.1/Wscales/build/bootloader/bootloader.bin"
Bootloader binary size 0x5180 bytes. 0x2e80 bytes (36%) free.
[3/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/ADS1230/ADS1230.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/ADS1230/ADS1230.c.obj 
ccache C:\Espressif\tools\xtensa-esp32s3-elf\esp-2022r1-11.2.0\xtensa-esp32s3-elf\bin\xtensa-esp32s3-elf-gcc.exe -DLV_ATTRIBUTE_FAST_MEM=IRAM_ATTR -DLV_CONF_INCLUDE_SIMPLE -IC:/Espressif/frameworks/esp-idf-v5.0.1/Wscales/build/config -IC:/Espressif/frameworks/esp-idf-v5.0.1/Wscales/main -IC:/Espressif/frameworks/esp-idf-v5.0.1/Wscales/components/lvgl/examples/widgets/label -IC:/Espressif/frameworks/esp-idf-v5.0.1/Wscales/main/ui -IC:/Espressif/frameworks/esp-idf-v5.0.1/Wscales/main/ADS1230 -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32s3/. -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32s3/private_include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32s3/. -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/esp32s3 -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/xtensa/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include/arch -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_lcd/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_lcd/interface -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/esp32s3/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_ringbuf/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/Wscales/components/lvgl -IC:/Espressif/frameworks/esp-idf-v5.0.1/Wscales/components/lvgl/src -IC:/Espressif/frameworks/esp-idf-v5.0.1/Wscales/components -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_timer/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_partition/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -O2 -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.0.1/Wscales=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.0.1=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -Wno-format -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/ADS1230/ADS1230.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\ADS1230\ADS1230.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/ADS1230/ADS1230.c.obj -c C:/Espressif/frameworks/esp-idf-v5.0.1/Wscales/main/ADS1230/ADS1230.c
C:/Espressif/frameworks/esp-idf-v5.0.1/Wscales/main/ADS1230/ADS1230.c:138:9: error: conflicting types for 'getWeight'; have 'int32_t(float)' {aka 'long int(float)'}
  138 | int32_t getWeight(float adc_val){
      |         ^~~~~~~~~
In file included from C:/Espressif/frameworks/esp-idf-v5.0.1/Wscales/main/ADS1230/ADS1230.c:2:
C:/Espressif/frameworks/esp-idf-v5.0.1/Wscales/main/ADS1230/ADS1230.h:14:7: note: previous declaration of 'getWeight' with type 'float(float)'
   14 | float getWeight(float adc_val);
      |       ^~~~~~~~~
ninja: build stopped: subcommand failed.
